--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -8,7 +8,7 @@
     <article class="content">
         {% if doc.feature_image %}
             <figure class="post-feature-image">
-                <img src="{{ doc.feature_image }}" alt="{{ title }}">
+                <img src="{{ doc.feature_image | correctImgURL }}" alt="{{ title }}">
             </figure>
         {% endif %}
         <section class="post-full-content">
